--- a/ticket-email-service/src/main/resources/application.properties
+++ b/ticket-email-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.mail.host=smtp-pulse.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.fromAdress=
+spring.mail.tesAddressTo=
+spring.mail.username=
+spring.mail.password=
+service.name=
