--- a/ticket-email-user-service/pom.xml
+++ b/ticket-email-user-service/pom.xml
@@ -58,6 +58,12 @@
             <artifactId>ticket-utils</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.1.10</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
