change mail service

--- a/ticket-email-service/src/main/resources/application.properties
+++ b/ticket-email-service/src/main/resources/application.properties
@@ -2,9 +2,18 @@ spring.mail.host=smtp-pulse.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.fromAdress=
-spring.mail.tesAddressTo=
-spring.mail.username=
-spring.mail.password=
-service.name=
-exchange.name=
+spring.mail.properties.mail.debug=true
+spring.mail.fromAddress=e.aysin@shelter.ru
+spring.mail.username=darksky270990@gmail.com
+spring.mail.password=pJ5Wp8d5cj9
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+
+service.rabbit.exchange=service.exchange
+service.rabbit.queue=service.queue
+service.rabbit.routingKey=service.routingkey
