--- a/ticket-email-user-service/src/main/resources/application.properties
+++ b/ticket-email-user-service/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
 
+
+service.rabbit.exchange=service.exchange
+service.rabbit.queue=service.queue
+service.rabbit.routingKey=service.routingkey
