change mail service

--- a/ticket-email-service/src/main/resources/application.properties
+++ b/ticket-email-service/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.rabbitmq.password=guest
 
 service.rabbit.exchange=service.exchange
 service.rabbit.queue=service.queue
-service.rabbit.routingKey=service.routingkey
+service.rabbit.routingKey=key
