--- a/ticket-email-service/src/main/resources/application.properties
+++ b/ticket-email-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
-spring.mail.fromAddress=e.aysin@shelter.ru
-spring.mail.username=darksky270990@gmail.com
-spring.mail.password=pJ5Wp8d5cj9
+spring.mail.fromAddress=
+spring.mail.username=
+spring.mail.password=
 
 
 spring.rabbitmq.host=localhost
@@ -14,6 +14,6 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 
-service.rabbit.exchange=service.exchange
-service.rabbit.queue=service.queue
+service.rabbit.exchange=service.mail
+service.rabbit.queue=mail.queue
 service.rabbit.routingKey=key
