--- a/ticket-email-user-service/src/main/resources/application.properties
+++ b/ticket-email-user-service/src/main/resources/application.properties
@@ -1,9 +1,11 @@
+server.port=8081
+
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 
-service.rabbit.exchange=service.exchange
-service.rabbit.queue=service.queue
+service.rabbit.exchange=service.mail
+service.rabbit.queue=mail.queue
 service.rabbit.routingKey=key
