--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <module>ticket-utils</module>
         <module>ticket-email-user-service</module>
         <module>ticket-user-registration</module>
+        <module>ticket-core</module>
     </modules>
 
 </project>
