--- a/ticket-email-service/src/main/resources/application.properties
+++ b/ticket-email-service/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
-spring.mail.fromAddress=
-spring.mail.username=
-spring.mail.password=
+spring.mail.fromAddress=e.aysin@shelter.ru
+spring.mail.username=darksky270990@gmail.com
+spring.mail.password=pJ5Wp8d5cj9
 
 
 spring.rabbitmq.host=localhost
