--- a/ticket-user-registration/pom.xml
+++ b/ticket-user-registration/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.ticket</groupId>
         <artifactId>tick</artifactId>
@@ -10,7 +11,7 @@
 
 
     <groupId>com.ticket</groupId>
-    <artifactId>ticket-user-registraion</artifactId>
+    <artifactId>ticket-user-registration</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ticket-user-registration</name>
     <description>ticket-user-registration</description>
@@ -48,6 +49,11 @@
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.0.1-jre</version>
         </dependency>
 
         <dependency>
