--- a/ticket-user-registration/src/main/resources/application.properties
+++ b/ticket-user-registration/src/main/resources/application.properties
@@ -4,4 +4,28 @@ server.tomcat.basedir=target/tomcat
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ticket_fast
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+
+service.rabbit.exchange=service.mail
+service.rabbit.queue=mail.queue
+service.rabbit.routingKey=key
+
+
 server.port=8080
