finish add js validate pass

--- a/ticket-user-registration/src/main/resources/application.properties
+++ b/ticket-user-registration/src/main/resources/application.properties
@@ -26,6 +26,6 @@ spring.rabbitmq.password=guest
 service.rabbit.exchange=service.mail
 service.rabbit.queue=mail.queue
 service.rabbit.routingKey=key
-
+logging.level.org.springframework.security=DEBUG
 
 server.port=8080
