--- a/ticket-user-registration/pom.xml
+++ b/ticket-user-registration/pom.xml
@@ -10,7 +10,6 @@
     </parent>
 
 
-    <groupId>com.ticket</groupId>
     <artifactId>ticket-user-registration</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ticket-user-registration</name>
@@ -81,6 +80,37 @@
             <artifactId>ticket-database-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ticket</groupId>
+            <artifactId>ticket-utils</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>5.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>5.15.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator</artifactId>
+            <version>0.42</version>
+        </dependency>
+
     </dependencies>
 
     <build>
